# dv2sqlite

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.in  README  README~  aclocal.m4  configure  configure.ac
doc/: Makefile.am  Makefile.in  dv2sqlite.xml
src/: Makefile.am  Makefile.in  config.h.in  dv2sqlite.c  dvstream.c  dvstream.h
